Add a Duplicate button to lotnumrecords.

--- a/app/core/templates/core/batchissuetable.html
+++ b/app/core/templates/core/batchissuetable.html
@@ -21,7 +21,7 @@
             </thead>
             {% for run in prod_runs_this_line %}
                 <tr>
-                    <td>{{ run.bill_pn }}</td>
+                    <td>{{ run.bill_no }}</td>
                     <td>{{ run.blend_pn }}</td>
                     <td>{{ run.blend_desc }}</td>
                     <td>{{ run.adjustedrunqty|floatformat:2 }}</td>
