--- a/app/core/templates/core/blendschedules/horixschedule.html
+++ b/app/core/templates/core/blendschedules/horixschedule.html
@@ -18,8 +18,8 @@
             <tr>
                 <td>{{ item.pn }}</td>
                 <td>{{ item.po_field }}</td>
-                <td>{{ item.blend }}</td>
-                <td>{{ item.product }}</td>
+                <td>{{ item.itemcode }}</td>
+                <td>{{ item.blend_desc }}</td>
                 <td>{{ item.gallonqty }}</td>
                 <td>{{ item.num_blends }}</td>
                 <td>{{ item.run_date|date:"M d, Y" }}</td>
