--- a/app/core/templates/core/productionblendruns.html
+++ b/app/core/templates/core/productionblendruns.html
@@ -24,7 +24,7 @@
             </thead>
             {% for item in current_page.object_list %}
                 <tr>
-                    <td>{{ item.bill_pn }}</td>
+                    <td>{{ item.bill_no }}</td>
                     <td>{{ item.blend_pn }}</td>
                     <td>{{ item.blend_desc }}</td>
                     <td>{{ item.adjustedrunqty|floatformat:2 }}</td>
