--- a/app/prodverse/templates/prodverse/batchissuetable.html
+++ b/app/prodverse/templates/prodverse/batchissuetable.html
@@ -23,7 +23,7 @@
             </thead>
             {% for run in lineRunsQS %}
                 <tr>
-                    <td>{{ run.bill_pn }}</td>
+                    <td>{{ run.bill_no }}</td>
                     <td>{{ run.blend_pn }}</td>
                     <td>{{ run.blend_desc }}</td>
                     <td>{{ run.adjustedrunqty|floatformat:2 }}</td>
