--- a/app/core/static/core/lotNumModal.css
+++ b/app/core/static/core/lotNumModal.css
@@ -4,7 +4,7 @@
     z-index: 9999 !important;
 }
 
-#newLotNumFormContainer {
+#newLotNumFormContainer, #editLotNumFormContainer {
     display: flex;
     align-items: center;
     justify-content: center;
