--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -59,14 +59,6 @@
                     <td>{{ item.line }}</td>
                     <td class='text-center'>
                         {{ item.desk|floatformat:0 }}
-                        {% comment %} <div class="dropdown">
-                            
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk1">Desk 1</a></li>
-                                <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk2">Desk 2</a></li>
-                            </ul>
-                        </div> {% endcomment %}
                     </td>
                     <td class='text-center'>{{ item.run_day }} {{ item.run_date|date:"M d, Y" }}</td>
                     <td class='text-center'>
@@ -85,9 +77,17 @@
                     </td>
                     <td class="text-center">
                         {% if item.date_entered %}
-                            Finished
+                            Blended
+                        {% elif item.schedule_value == "Not Scheduled" %}
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Schedule For...</button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk1">Assign to Desk 1</a></li>
+                                    <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk2">Assign to Desk 2</a></li>
+                                </ul>
+                            </div>
                         {% else %}
-
+                            {{ item.schedule_value }}
                         {% endif %}
                     </td>
                     <td style="display:flex;">
