--- a/app/core/templates/core/modals/lotnum-edit-modal.html
+++ b/app/core/templates/core/modals/lotnum-edit-modal.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'core/lotNumModal.css' %}">
  
-<div class="modal fade" id="editLotNumNumModal" tabindex="-1" aria-labelledby="editLotNumNumModalLabel" aria-hidden="true">
+<div class="modal fade" id="editLotNumModal" tabindex="-1" aria-labelledby="editLotNumModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
         <div class="modal-header">
