Correct lotnumgen buttons on various sheets.

--- a/app/core/templates/core/blendschedules/horixschedule.html
+++ b/app/core/templates/core/blendschedules/horixschedule.html
@@ -24,7 +24,7 @@
                 <td>{{ item.num_blends }}</td>
                 <td>{{ item.run_date|date:"M d, Y" }}</td>
                 <td class="text-center lotNumCell">
-                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-partnum={{ item.blend }} data-desc={{ item.blend_desc }} data-threewkqty={{ item.three_wk_short }}>+</button>
+                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-partnum="{{ item.blend }}" data-desc="{{ item.blend_desc }}" data-threewkqty="{{ item.three_wk_short }}">+</button>
                 </td>
             </tr>
         {% endfor %}
