--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -36,11 +36,11 @@
                 <td>{{ item.one_wk_short }}</td>
                 <td>{{ item.two_wk_short }}</td>
                 <td>{{ item.three_wk_short }}</td>
-                {% if user.is_staff %}
-                    <td class="text-center lotNumCell">
-                        <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-partnum={{ item.blend_pn }} data-desc={{ item.blend_desc }} data-threewkqty={{ item.three_wk_short }}>+</button>
-                    </td>
-                {% endif %}
+
+                <td class="text-center lotNumCell">
+                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-partnum="{{ item.blend_pn }}" data-desc="{{ item.blend_desc }}" data-threewkqty="{{ item.three_wk_short }}">+</button>
+                </td>
+                
                 <td class="text-center">{{ item.schedule_value }}</td>
             </tr>
         {% endfor %}
