Allow blank & null in run date lotnumber field.

--- a/app/core/templates/core/testpage.html
+++ b/app/core/templates/core/testpage.html
@@ -13,9 +13,15 @@
 <!-- Body Blocks -->
 {% block content %}
     <div>
-        {{ testform }}
+      <form action="/core/updatelotnumrecord/5065" method=POST>
+        {% csrf_token %}
+        <table id="lotnumformtable">
+          {{ testform }}
+        </table>
     </div>
-  {% endblock content %}
+    <button type="submit" name="editLotNumRecord" method=POST value="Save Changes"  class="btn btn-primary">Save Changes</button>
+{% endblock content %}
+
 <!-- End Body -->
 {% block belowdeckscripts %}
 
