Update lot number functions.

--- a/app/core/templates/core/blendschedule.html
+++ b/app/core/templates/core/blendschedule.html
@@ -6,9 +6,9 @@
 
     {% if blend_area == 'all' %}
         {% include 'core/blendschedules/allschedules.html' %}
-    {% elif blend_area == 'Desk1' %}
+    {% elif blend_area == 'Desk_1' %}
         {% include 'core/blendschedules/deskoneschedule.html' %}
-    {% elif blend_area == 'Desk2' %}
+    {% elif blend_area == 'Desk_2' %}
         {% include 'core/blendschedules/desktwoschedule.html' %}
     {% elif blend_area == 'Hx' %}
         {% include 'core/blendschedules/horixschedule.html' %}
