--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -1,5 +1,11 @@
-<h1>Blend Schedule for Desk 2</h1>
-<br>
+<div class="scheduleHeader">
+    <h1>Blend Schedule for Desk 2</h1>
+    <br>
+    <a href="/core/blendschedule/Desk_1">View Desk 1 Schedule</a>
+    -- 
+    <a href="/core/blendschedule/all">View All Schedules</a>
+    <br>
+</div>
 <div class="table-responsive-sm">
     <table class="table text-left table-bordered">
         <thead class="thead-dark">
