--- a/app/core/templates/core/modals/lotnum-confirm-modal.html
+++ b/app/core/templates/core/modals/lotnum-confirm-modal.html
@@ -10,8 +10,8 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <a id="modalButtonLink" href="/core/delete_lot_num_record/">
-                <button type="button" class="btn btn-outline-danger" id="modalButton"></button>
+            <a id="confirmModalButtonLink" href="/core/delete_lot_num_record/">
+                <button type="button" class="btn btn-outline-danger" id="confirmModalButton"></button>
             </a>
         </div>
     </div>
