--- a/app/core/templates/core/blendschedules/drumschedule.html
+++ b/app/core/templates/core/blendschedules/drumschedule.html
@@ -1,5 +1,9 @@
-<h1>Blend Schedule for Drums</h1>
-<br>
+<div class="scheduleHeader">
+    <h1>Blend Schedule for Drums</h1>
+    <br>
+    <a href="/core/blendschedule/all">View All Schedules</a>
+    <br>
+</div>
 <div class="table-responsive-sm">
     <table class="table text-left table-bordered">
         <thead class="thead-dark">
@@ -24,7 +28,7 @@
                 <td>{{ item.num_blends }}</td>
                 <td>{{ item.run_date|date:"M d, Y" }}</td>
                 <td class="text-center lotNumCell">
-                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Dm" data-partnum={{ item.blend }} data-desc={{ item.blend_desc }} data-threewkqty={{ item.three_wk_short }}>+</button>
+                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Dm" data-rundate="{{ item.run_date }}" data-partnum="{{ item.itemcode }}" data-desc="{{ item.blend_desc }}" data-threewkqty="{{ item.gallonqty }}">+</button>
                 </td>
             </tr>
         {% endfor %}
