--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -33,6 +33,7 @@
     {% endif %}
 
     {% include 'core/modals/lotnum-confirm-modal.html' %}
+    {% include 'core/modals/schedule-addlot-modal.html' %}
 
     <br/><br/>
     <div class="table-responsive-sm">
@@ -66,7 +67,7 @@
                     <td>{{ item.date_created|date:"M d, Y" }}</td>
                     <td>{{ item.line }}</td>
                     <td class='text-center'>
-                        {{ item.desk|floatformat:0 }}
+                        {{ item.desk }}
                     </td>
                     <td class='text-center'>{{ item.run_day }} {{ item.run_date|date:"M d, Y" }}</td>
                     <td class='text-center'>
@@ -88,14 +89,18 @@
                             Blended
                         {% elif item.schedule_value == "Not Scheduled" %}
                             <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Schedule For...</button>
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Unscheduled</button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk1">Assign to Desk 1</a></li>
-                                    <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk2">Assign to Desk 2</a></li>
+                                    <li><a class="dropdown-item addToScheduleLink" data-bs-toggle="modal" data-partnum="{{ item.part_number }}" data-desc="{{ item.description }}" data-lotnum="{{ item.lot_number }}" data-lotqty="{{ item.lot_quantity }}"   data-line="{{ item.line }}" data-blendDesk="{{item.desk}}" data-bs-target="#addToScheduleModal">
+                                        Assign to {{ item.desk }}
+                                    </a></li>
+                                    <li><a class="dropdown-item" dataItemID="{{ item.id }}" href="/core/lotnumrecords/?edit_yesno=yes&lot_id={{ item.id }}">
+                                        Change Desk
+                                    </a></li>
                                 </ul>
                             </div>
                         {% else %}
-                            {{ item.schedule_value }}
+                            <b><a href="/core/blendschedule/{{ item.schedule_value }}">{{ item.schedule_value }}</a></b>
                         {% endif %}
                     </td>
                     <td style="display:flex;">
@@ -104,8 +109,7 @@
                                 <i class="fas fa-edit" disabled="disabled"></i>
                             </button>
                         </a>
-
-                        <button dataItemID="{{ item.id }}" style="margin-right: 5px;" type="button" class="btn btn-info duplicateBtn" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-desc="{{ item.description }}" data-partnum="{{ item.part_number }}" data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
+                        <button dataItemID="{{ item.id }}" style="margin-right: 5px;" type="button" class="btn duplicateBtn" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-desc="{{ item.description }}" data-partnum="{{ item.part_number }}" data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
                             <i class="far fa-clone" disabled="disabled"></i>
                         </button>
                         <button dataItemID="{{ item.id }}" type="button" class="btn btn-outline-danger deleteBtn" data-bs-toggle="modal" data-bs-target="#lotNumConfirmModal">
@@ -156,7 +160,6 @@
             Page {{ current_page.number }} of {{ current_page.paginator.num_pages }}
         </div>
     </div>
-{{ lotnum_list }}
 {% endblock content %}
 
 
