--- a/app/core/templates/core/modals/lotnum-add-modal.html
+++ b/app/core/templates/core/modals/lotnum-add-modal.html
@@ -29,3 +29,8 @@
     </div>
 </div>
 <script src="{% static 'core/js/descriptionLookup.js' %}"></script>
+<script>
+    $(document).ready(function(){
+        $("#id_lot_number").prop('readonly', true)
+    });
+</script>
