--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -31,8 +31,7 @@
                 </tr>
             </thead>
             {% for item in upcoming_blends %}
-                {% if item.needs_count %}
-                    <tr style="background-color:rgb(250, 189, 109)">
+                    <tr {% if item.needs_count %} style="background-color:rgb(250, 189, 109)" {% endif %}>
                         <td class='text-center'>
                             <input type="checkbox" name={{ item.blend_pn }}></input>
                         </td>
@@ -62,40 +61,7 @@
                                 </ul>
                             </div>
                         </td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td class='text-center'>
-                            <input type="checkbox" name={{ item.blend_pn }}></input>
-                        </td>
-                        <td>{{ item.blend_pn }}</td>
-                        <td>{{ item.blend_desc }}</td>
-                        <td>{{ item.starttime|floatformat:2 }}</td>
-                        <td>{{ item.expected_on_hand|floatformat:2 }}</td>
-                        <td>{{ item.last_count|floatformat:0 }}: {{ item.last_count_date|date:"m-d-y" }}</td>
-                        <td>{{ item.last_transaction_type }}: {{ item.last_transaction_date|date:"m-d-y" }}</td>
-                        <td>
-                            {% if item.short_hour == 0 %}
-                                No
-                            {% else %}
-                                {{ item.short_hour|floatformat:2 }}
-                            {% endif %}
-                        </td>
-                        <td>
-                            <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Select
-                                </button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.blend_pn }}">Lot Numbers</a></li>
-                                    <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.blend_pn }}">All Upcoming Runs</a></li>
-                                    <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.blend_pn }}">Transaction History</a></li>
-                                    <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.blend_pn }}">Count History</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
-                {% endif %}
+                    </tr>                
             {% endfor %}
         </table>
     </div>
