--- a/app/core/templates/core/reports/lotnumsreport.html
+++ b/app/core/templates/core/reports/lotnumsreport.html
@@ -28,7 +28,8 @@
                     </tr>
                 </thead>
                 {% for item in current_page.object_list %}
-                <tr class="{{item.line}}Row">
+
+                <tr class="{{item.line}}Row" {% if not item.date_entered %} style="background-color: lightgray" {% endif %}>
                     <td>{{ item.part_number }}</td>
                     <td>{{ item.description }}</td>
                     <td>{{ item.lot_number }}</td>
